# openfoodfacts-events

./: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  testpy.ini
.github/: CODEOWNERS  dependabot.yml  labeler.yml
.github/workflows/: autoblack.yml  container-build.yml  container-deploy.yml  github-projects.yml  label.yml  pull_request.yml  release-please.yml
alembic/: env.py
alembic/versions/: 2023_04_25_1342-c5920d3da32f_creation_of_the_events_and_badges_tables.py  2023_05_03_1413-7c5cd11d6a82_create_events_and_badges_table.py
app/: constants.py  crud.py  database.py  main.py  models.py  schemas.py
docker/: dev.yml  prod.yml
events/: crud.py  database.py  main.py  models.py  schemas.py
tests/integration/: off-local.postman_environment.json  off.postman_environment.json  openfoodfacts-events.postman_collection.json
tests/unit/: test_api.py  test_migrations.py
